--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  background-color: var(--background);
   position: relative;
 }
 
@@ -76,7 +75,7 @@
 .hero__social-personal {
   color: rgb(200 200 200);
   margin-bottom: 1rem;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 
 .text-white {
