--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "poppins", sans-serif;
+  font-family: "poppins", sans-serif !important;
   background-color: black;
   color: var(--main);
 }
