--- a/src/components/stats/stats.css
+++ b/src/components/stats/stats.css
@@ -1,5 +1,5 @@
 .stats__title {
-  padding-top: 3rem;
+  padding: 3rem 0 2rem 0;
   font-size: 1.875rem;
   line-height: 2.25rem;
   letter-spacing: -.025em;
