--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -23,7 +23,7 @@
 .hero__name {
   color: var(--main);
   font-weight: 900;
-  font-size: 1.875rem;
+  font-size: clamp(1.375rem, 1.193rem + 0.91vw, 1.875rem);
   line-height: 2.25rem;
   margin-right: 1rem;
   width: 100%;
@@ -85,8 +85,11 @@
 }
 
 .hero__workplace img {
-  border-radius: 20px;
+  width: 100%;
+  height: auto;
 }
+
+
 
 .bn632-hover {
   display: flex;
@@ -98,7 +101,7 @@
   cursor: pointer;
   margin: 20px;
   height: 40px;
-  text-align:center;
+  text-align: center;
   border: none;
   background-size: 300% 100%;
   border-radius: 50px;
@@ -106,7 +109,7 @@
   -o-transition: all .4s ease-in-out;
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
-  
+
 }
 
 .bn632-hover:hover {
@@ -122,12 +125,35 @@
 }
 
 .bn632-hover.bn22 {
-  background-image: linear-gradient(
-    to right,
-    #68DF99,
-    #65B56D,
-    #02F243,
-    #52830A
-  );
+  background-image: linear-gradient(to right,
+      #68DF99,
+      #65B56D,
+      #02F243,
+      #52830A);
   box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
+}
+
+@media (max-width: 1100px) {
+  .hero__workplace img {
+    width: 25rem;
+  }
+
+  .hero__description {
+    padding: 10px;
+    left: 300px;
+  }
+}
+
+@media (max-width: 790px) {
+  .hero__workplace img {
+    width: 16rem;
+  }
+
+  .hero__name {
+    line-height: inherit;
+  }
+  .hero__description {
+   top: -16px;
+   left: 177px;
+  }
 }
