--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -13,3 +13,17 @@
 .skills-item {
   position: relative;
 }
+.skills-item>img{
+  height: 5rem !important;
+}
+
+@media (max-width: 1000px) {
+  .skills-item>img{
+    height: 4rem !important;
+  }
+}
+@media (max-width: 480px) {
+  .skills-item>img{
+    height: 3rem !important;
+  }
+}
