--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -48,7 +48,7 @@
 
 @media (max-width: 600px) {
   .lng__btns-wrapper>a {
-    padding: 0.2em 0.5em;
+    padding: 1em 1em;
   }
 }
 
@@ -56,7 +56,14 @@
   .lng__btns-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 35px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header__wrapper {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
   }
