--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,29 +1,35 @@
-.skills__wrapper{
-  margin-top: 3cap;
-  width: 100%;
+.skills__wrapper {
+  margin-top: 4cap;
+  width: 95%;
 }
 
-.skills__list{
+.skills__list {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-} 
+}
 
 .skills-item {
   position: relative;
 }
-.skills-item>img{
+
+.skills-item>img {
   height: 5rem !important;
 }
 
 @media (max-width: 1000px) {
-  .skills-item>img{
+  .skills-item>img {
     height: 4rem !important;
   }
 }
-@media (max-width: 480px) {
-  .skills-item>img{
+
+@media (max-width: 500px) {
+  .skills-item>img {
     height: 3rem !important;
+  }
+
+  .skills__wrapper {
+    width: 80;
   }
 }
