--- a/src/components/myWork/Mywork.css
+++ b/src/components/myWork/Mywork.css
@@ -86,3 +86,11 @@
   top: 0;
   border-radius: 10px;
 }
+
+.disabled-link {
+  pointer-events: none; /* Відключити всі події */
+  cursor: default; /* Змінити курсор */
+  opacity: 0.6; /* Змінити непрозорість */
+  color: #aaa; /* Змінити колір тексту */
+  text-decoration: none; /* Забрати підкреслення, якщо є */
+}
