--- a/src/components/stats/stats.css
+++ b/src/components/stats/stats.css
@@ -1,3 +1,5 @@
+
+
 .stats__title {
   padding: 3rem 0 2rem 0;
   font-size: 1.875rem;
@@ -61,9 +63,17 @@
   padding-top: 10px;
 }
 
+.ant-modal-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ant-modal-content, .ant-modal-title{
+  background-color: #2C2C2C !important;
+}
 
 @media (max-width: 940px) {
-
   .stats__item,
   .stats__rank>img {
     max-width: 170px;
@@ -73,11 +83,9 @@
     font-size: 22px;
     padding-left: 44px;
   }
-
 }
 
 @media (max-width: 700px) {
-
   .stats__item {
     max-width: 130px;
   }
@@ -91,10 +99,10 @@
     max-width: 143px;
     max-height: 135px;
   }
+
 }
 
 @media (max-width: 590px) {
-
   .stats__wrapper {
     flex-wrap: wrap;
     justify-content: center;
