--- a/src/components/myWork/workList/worklist.css
+++ b/src/components/myWork/workList/worklist.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 20px;
   max-width: 1280px;
-  margin: 7px; /* Залишаємо тільки зовнішні відступи */
+  margin: 0 auto;
   padding: 10px 10px 100px 10px;
 }
 
